adding User paths and swagger docs
